src/main/java/com/ide/parser/TravisParser.java
// Generated from Travis.g4 by ANTLR 4.7.2
package com.ide.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TravisParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, INT=2, VOID=3, MAIN=4, PRINT=5, TRUE=6, FALSE=7, IF=8, ELSE=9, 
		WHILE=10, OR=11, AND=12, IG=13, NIG=14, GT=15, LT=16, GTEQ=17, LTEQ=18, 
		NOT=19, IGUAL=20, SUM=21, RES=22, MUL=23, DIV=24, PA=25, PC=26, LA=27, 
		LC=28, COMENTARIO=29, COMENTARIO_LINEA=30, ID=31, NUMERO=32, WS=33;
	public static final int
		RULE_programa = 0, RULE_encabezado = 1, RULE_cuerpo = 2, RULE_declaraciones = 3, 
		RULE_if_state = 4, RULE_else_state = 5, RULE_elseIf_state = 6, RULE_while_state = 7, 
		RULE_declarasignar = 8, RULE_declaracion = 9, RULE_impresion = 10, RULE_asignacion = 11, 
		RULE_condicion = 12, RULE_expr = 13, RULE_tipo_dato = 14, RULE_declaracionesElse = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "encabezado", "cuerpo", "declaraciones", "if_state", "else_state", 
			"elseIf_state", "while_state", "declarasignar", "declaracion", "impresion", 
			"asignacion", "condicion", "expr", "tipo_dato", "declaracionesElse"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'lit'", "'astro'", "'world'", "'outwest'", "'true'", "'false'", 
			"'dis'", "'antidote'", "'rodeo'", "'||'", "'&&'", "'=='", "'!='", "'>'", 
			"'<'", "'>='", "'<='", "'!'", "'='", "'+'", "'-'", "'*'", "'/'", "'('", 
			"')'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "INT", "VOID", "MAIN", "PRINT", "TRUE", "FALSE", "IF", "ELSE", 
			"WHILE", "OR", "AND", "IG", "NIG", "GT", "LT", "GTEQ", "LTEQ", "NOT", 
			"IGUAL", "SUM", "RES", "MUL", "DIV", "PA", "PC", "LA", "LC", "COMENTARIO", 
			"COMENTARIO_LINEA", "ID", "NUMERO", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Travis.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TravisParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public EncabezadoContext encabezado() {
			return getRuleContext(EncabezadoContext.class,0);
		}
		public TerminalNode LA() { return getToken(TravisParser.LA, 0); }
		public CuerpoContext cuerpo() {
			return getRuleContext(CuerpoContext.class,0);
		}
		public TerminalNode LC() { return getToken(TravisParser.LC, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TravisVisitor ) return ((TravisVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			encabezado();
			setState(33);
			match(LA);
			setState(34);
			cuerpo();
			setState(35);
			match(LC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EncabezadoContext extends ParserRuleContext {
		public EncabezadoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_encabezado; }
	 
		public EncabezadoContext() { }
		public void copyFrom(EncabezadoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class InicioContext extends EncabezadoContext {
		public TerminalNode VOID() { return getToken(TravisParser.VOID, 0); }
		public TerminalNode MAIN() { return getToken(TravisParser.MAIN, 0); }
		public TerminalNode PA() { return getToken(TravisParser.PA, 0); }
		public TerminalNode PC() { return getToken(TravisParser.PC, 0); }
		public InicioContext(EncabezadoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TravisVisitor ) return ((TravisVisitor<? extends T>)visitor).visitInicio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EncabezadoContext encabezado() throws RecognitionException {
		EncabezadoContext _localctx = new EncabezadoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_encabezado);
		try {
			_localctx = new InicioContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			match(VOID);
			setState(38);
			match(MAIN);
			setState(39);
			match(PA);
			setState(40);
			match(PC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CuerpoContext extends ParserRuleContext {
		public DeclaracionesContext declaraciones() {
			return getRuleContext(DeclaracionesContext.class,0);
		}
		public CuerpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TravisVisitor ) return ((TravisVisitor<? extends T>)visitor).visitCuerpo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CuerpoContext cuerpo() throws RecognitionException {
		CuerpoContext _localctx = new CuerpoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cuerpo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			declaraciones();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionesContext extends ParserRuleContext {
		public List<While_stateContext> while_state() {
			return getRuleContexts(While_stateContext.class);
		}
		public While_stateContext while_state(int i) {
			return getRuleContext(While_stateContext.class,i);
		}
		public List<If_stateContext> if_state() {
			return getRuleContexts(If_stateContext.class);
		}
		public If_stateContext if_state(int i) {
			return getRuleContext(If_stateContext.class,i);
		}
		public List<AsignacionContext> asignacion() {
			return getRuleContexts(AsignacionContext.class);
		}
		public AsignacionContext asignacion(int i) {
			return getRuleContext(AsignacionContext.class,i);
		}
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public List<ImpresionContext> impresion() {
			return getRuleContexts(ImpresionContext.class);
		}
		public ImpresionContext impresion(int i) {
			return getRuleContext(ImpresionContext.class,i);
		}
		public List<DeclarasignarContext> declarasignar() {
			return getRuleContexts(DeclarasignarContext.class);
		}
		public DeclarasignarContext declarasignar(int i) {
			return getRuleContext(DeclarasignarContext.class,i);
		}
		public DeclaracionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaraciones; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TravisVisitor ) return ((TravisVisitor<? extends T>)visitor).visitDeclaraciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionesContext declaraciones() throws RecognitionException {
		DeclaracionesContext _localctx = new DeclaracionesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaraciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << PRINT) | (1L << IF) | (1L << WHILE) | (1L << ID))) != 0)) {
				{
				setState(50);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(44);
					while_state();
					}
					break;
				case 2:
					{
					setState(45);
					if_state();
					}
					break;
				case 3:
					{
					setState(46);
					asignacion();
					}
					break;
				case 4:
					{
					setState(47);
					declaracion();
					}
					break;
				case 5:
					{
					setState(48);
					impresion();
					}
					break;
				case 6:
					{
					setState(49);
					declarasignar();
					}
					break;
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_stateContext extends ParserRuleContext {
		public If_stateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_state; }
	 
		public If_stateContext() { }
		public void copyFrom(If_stateContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IfGodContext extends If_stateContext {
		public TerminalNode IF() { return getToken(TravisParser.IF, 0); }
		public TerminalNode PA() { return getToken(TravisParser.PA, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PC() { return getToken(TravisParser.PC, 0); }
		public TerminalNode LA() { return getToken(TravisParser.LA, 0); }
		public DeclaracionesContext declaraciones() {
			return getRuleContext(DeclaracionesContext.class,0);
		}
		public TerminalNode LC() { return getToken(TravisParser.LC, 0); }
		public List<ElseIf_stateContext> elseIf_state() {
			return getRuleContexts(ElseIf_stateContext.class);
		}
		public ElseIf_stateContext elseIf_state(int i) {
			return getRuleContext(ElseIf_stateContext.class,i);
		}
		public Else_stateContext else_state() {
			return getRuleContext(Else_stateContext.class,0);
		}
		public IfGodContext(If_stateContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TravisVisitor ) return ((TravisVisitor<? extends T>)visitor).visitIfGod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_stateContext if_state() throws RecognitionException {
		If_stateContext _localctx = new If_stateContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_if_state);
		int _la;
		try {
			int _alt;
			_localctx = new IfGodContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(IF);
			setState(56);
			match(PA);
			setState(57);
			condicion(0);
			setState(58);
			match(PC);
			setState(59);
			match(LA);
			setState(60);
			declaraciones();
			setState(61);
			match(LC);
			setState(65);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(62);
					elseIf_state();
					}
					} 
				}
				setState(67);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(68);
				else_state();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Else_stateContext extends ParserRuleContext {
		public Else_stateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else_state; }
	 
		public Else_stateContext() { }
		public void copyFrom(Else_stateContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ElseGodContext extends Else_stateContext {
		public TerminalNode ELSE() { return getToken(TravisParser.ELSE, 0); }
		public TerminalNode LA() { return getToken(TravisParser.LA, 0); }
		public DeclaracionesElseContext declaracionesElse() {
			return getRuleContext(DeclaracionesElseContext.class,0);
		}
		public TerminalNode LC() { return getToken(TravisParser.LC, 0); }
		public ElseGodContext(Else_stateContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TravisVisitor ) return ((TravisVisitor<? extends T>)visitor).visitElseGod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Else_stateContext else_state() throws RecognitionException {
		Else_stateContext _localctx = new Else_stateContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_else_state);
		try {
			_localctx = new ElseGodContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(ELSE);
			setState(72);
			match(LA);
			setState(73);
			declaracionesElse();
			setState(74);
			match(LC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseIf_stateContext extends ParserRuleContext {
		public ElseIf_stateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseIf_state; }
	 
		public ElseIf_stateContext() { }
		public void copyFrom(ElseIf_stateContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ElseifgodContext extends ElseIf_stateContext {
		public TerminalNode ELSE() { return getToken(TravisParser.ELSE, 0); }
		public TerminalNode IF() { return getToken(TravisParser.IF, 0); }
		public TerminalNode PA() { return getToken(TravisParser.PA, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PC() { return getToken(TravisParser.PC, 0); }
		public TerminalNode LA() { return getToken(TravisParser.LA, 0); }
		public DeclaracionesContext declaraciones() {
			return getRuleContext(DeclaracionesContext.class,0);
		}
		public TerminalNode LC() { return getToken(TravisParser.LC, 0); }
		public ElseifgodContext(ElseIf_stateContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TravisVisitor ) return ((TravisVisitor<? extends T>)visitor).visitElseifgod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElseIf_stateContext elseIf_state() throws RecognitionException {
		ElseIf_stateContext _localctx = new ElseIf_stateContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_elseIf_state);
		try {
			_localctx = new ElseifgodContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(ELSE);
			setState(77);
			match(IF);
			setState(78);
			match(PA);
			setState(79);
			condicion(0);
			setState(80);
			match(PC);
			setState(81);
			match(LA);
			setState(82);
			declaraciones();
			setState(83);
			match(LC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class While_stateContext extends ParserRuleContext {
		public While_stateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_state; }
	 
		public While_stateContext() { }
		public void copyFrom(While_stateContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class WhileGodContext extends While_stateContext {
		public TerminalNode WHILE() { return getToken(TravisParser.WHILE, 0); }
		public TerminalNode PA() { return getToken(TravisParser.PA, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PC() { return getToken(TravisParser.PC, 0); }
		public TerminalNode LA() { return getToken(TravisParser.LA, 0); }
		public DeclaracionesContext declaraciones() {
			return getRuleContext(DeclaracionesContext.class,0);
		}
		public TerminalNode LC() { return getToken(TravisParser.LC, 0); }
		public WhileGodContext(While_stateContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TravisVisitor ) return ((TravisVisitor<? extends T>)visitor).visitWhileGod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final While_stateContext while_state() throws RecognitionException {
		While_stateContext _localctx = new While_stateContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_while_state);
		try {
			_localctx = new WhileGodContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(WHILE);
			setState(86);
			match(PA);
			setState(87);
			condicion(0);
			setState(88);
			match(PC);
			setState(89);
			match(LA);
			setState(90);
			declaraciones();
			setState(91);
			match(LC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarasignarContext extends ParserRuleContext {
		public DeclarasignarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarasignar; }
	 
		public DeclarasignarContext() { }
		public void copyFrom(DeclarasignarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclarasigodContext extends DeclarasignarContext {
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public TerminalNode ID() { return getToken(TravisParser.ID, 0); }
		public TerminalNode IGUAL() { return getToken(TravisParser.IGUAL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DeclarasigodContext(DeclarasignarContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TravisVisitor ) return ((TravisVisitor<? extends T>)visitor).visitDeclarasigod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarasignarContext declarasignar() throws RecognitionException {
		DeclarasignarContext _localctx = new DeclarasignarContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declarasignar);
		try {
			_localctx = new DeclarasigodContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			tipo_dato();
			setState(94);
			match(ID);
			setState(95);
			match(IGUAL);
			setState(96);
			expr(0);
			setState(97);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
	 
		public DeclaracionContext() { }
		public void copyFrom(DeclaracionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclaragodContext extends DeclaracionContext {
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public TerminalNode ID() { return getToken(TravisParser.ID, 0); }
		public DeclaragodContext(DeclaracionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TravisVisitor ) return ((TravisVisitor<? extends T>)visitor).visitDeclaragod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_declaracion);
		try {
			_localctx = new DeclaragodContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			tipo_dato();
			setState(100);
			match(ID);
			setState(101);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImpresionContext extends ParserRuleContext {
		public ImpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impresion; }
	 
		public ImpresionContext() { }
		public void copyFrom(ImpresionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImpregodContext extends ImpresionContext {
		public TerminalNode PRINT() { return getToken(TravisParser.PRINT, 0); }
		public TerminalNode PA() { return getToken(TravisParser.PA, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PC() { return getToken(TravisParser.PC, 0); }
		public ImpregodContext(ImpresionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TravisVisitor ) return ((TravisVisitor<? extends T>)visitor).visitImpregod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImpresionContext impresion() throws RecognitionException {
		ImpresionContext _localctx = new ImpresionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_impresion);
		try {
			_localctx = new ImpregodContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(PRINT);
			setState(104);
			match(PA);
			setState(105);
			expr(0);
			setState(106);
			match(PC);
			setState(107);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	 
		public AsignacionContext() { }
		public void copyFrom(AsignacionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AsignagodContext extends AsignacionContext {
		public TerminalNode ID() { return getToken(TravisParser.ID, 0); }
		public TerminalNode IGUAL() { return getToken(TravisParser.IGUAL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AsignagodContext(AsignacionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TravisVisitor ) return ((TravisVisitor<? extends T>)visitor).visitAsignagod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_asignacion);
		try {
			_localctx = new AsignagodContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(ID);
			setState(110);
			match(IGUAL);
			setState(111);
			expr(0);
			setState(112);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
